# stellatro-kit

./: .gitignore  README.md  requirements.txt  test_copy.py
starter-kit/: README.md  jokers.html  jokers.md  pyproject.toml  requirements.txt  tutorial.md
starter-kit/assets/shaders/: fragment.glsl
starter-kit/bots/: __init__.py  bot_interface.py  greedy_bot.py  minimax_bot.py  myfirstbot.py  oracle.py  participant_bot.py  prakharfirstbot.py  random_bot.py  stronger.py  trueoracle.py  utils.py
starter-kit/bots/rl/: .gitignore  README.md  config.py  env.py  eval.py  make_submission.py  model.py  rl_bot.py  train.py
starter-kit/gui/: README.md  button.py  card_hand_container.py  card_sprite.py  flow_background.py  game_over_container.py  gui.py  joker_container.py  joker_sprites.py  phase_container.py  player_btn_container.py  player_gui.py  player_info.py  stellatro.spec  text.py  tooltip.py  utils.py  wind_effect.py
starter-kit/models/: pytorch_bot.py
starter-kit/scripts/: benchmark_draft_call.py  random_tournament.py  run_bot_match.py  shell.py  simulate_competition_match.py  tint_stellatro_cards.py  trace_101_105.py  trace_15514.py  trace_final_round.py  trace_loss_seeds.py  zip_submission.py
starter-kit/submission_folder/: README.md  bot.py
starter-kit/tests/: conftest.py  test_game_loop.py  test_minimax.py  test_shell.py
stellatro-common/: pyproject.toml
stellatro-common/stellatro_common/: __init__.py  models.py
stellatro-game/: pyproject.toml
stellatro-game/stellatro_game/: __init__.py  card.py  checker.py  game.py  jokers.py  utils.py
